# cli-music-player

./: Cargo.toml  makefile
src/: lib.rs  main.rs
src/common/: config.rs  factory.rs  mod.rs  self_setup.rs
src/download_provider/: interface.rs  mod.rs  youtube_dl.rs
src/search_provider/: interface.rs  mod.rs  youtube_scraper.rs
