[package]
name = "cli-music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch="0.3.8"
serde = {version="1.0.138", features=["derive"]}
serde_json = {version="1.0.82"}
reqwest = {version = "0.11.11", features = ["blocking"]}
headless_chrome = {version="0.9.0"}
scraper = "0.13.0"
failure = {version="0.1.8"}
log = {version="0.4.17"}
env_logger = {version="0.9.0"}
directories = {version="4.0.1"}
